setup store on first login/ after signup

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -6,6 +6,7 @@ development:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
       database: lefiores_development
+      allow_dynamic_fields: false
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
@@ -59,6 +60,7 @@ test:
   sessions:
     default:
       database: lefiores_test
+      allow_dynamic_fields: false
       hosts:
         - localhost:27017
       options:
