--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,16 @@
+production:
+  sessions:
+    default:
+      database: lefiores_prod      
+      hosts:
+        - localhost:27017
+      options:
+        read: primary
+        # In the test environment we lower the retries and retry interval to
+        # low amounts for fast failures.
+        max_retries: 30
+        retry_interval: 0
+
 development:
   # Configure available database sessions. (required)
   sessions:
@@ -69,3 +82,4 @@ test:
         # low amounts for fast failures.
         max_retries: 1
         retry_interval: 0
+
