--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-
+Gemfile
+Gemfile.lock
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
@@ -15,3 +16,5 @@
 /log/*
 !/log/.keep
 /tmp
+
+
